Basic Meter Validation against CatalogueItem